--- a/report.ipynb
+++ b/report.ipynb
@@ -28,7 +28,7 @@
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "from bpe_2 import Tokenizer"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "plt.style.use('seaborn')\n",
-    "sns.set_palette(\"husl\")\n",
     "\n",
     "# 그래프 크기 설정\n",
     "plt.figure(figsize=(12, 6))\n"
